    - [9746] The displayPoint method of the vpDisplayOpenCV class doesn't work.
    - [10472] Bug in the visual features: can't select the good feature.
    - [10647] Delay in displaying image overlays
    - [10687] The GDI display is not detected with Visual Studio 2010
    - [10697] CMake standard output vars
    - [10719] Compilation error in vpPlot
  - Improvements
    - Copy constructors were added to better support stl lists and vectors.
    - Change the FindOpenCV.cmake in order to detect automatically 
      OpenCV 1.1, 2.0 and 2.1.
    - In firewire framegrabbing using vp1394TwoGrabber based on libdc1394-2.x,
      add possibility to change during the execution the shutter, the gain, the
      brightness, ... (see documentation for more details)
    - In vpThetaUVector addition of &operator=() method to initialise all the 
      angles to the same value
    - In vpHomogeneousMatrix addition of 
      . eye() method to set the transformation as identity
      . extract(vpThetaUVector &) to extract the rotation as a Theta U vector
    - In vpRobotViper850 add openGripper() and closeGripper() functions to 
      control the Schunk two fingers electric gripper (available only at 
      Inria). 
    - In vpRotationVector and vpTranslationVector introduction of set() 
      method that allows initialization from 3 doubles
    - Documentation improvements
----------------------------------------------	
ViSP 2.4.4 (released January 8th, 2010)
  - Features removed
    - vpMePath has been removed.
----------------------------------------------	
ViSP 2.4.4-rc1 (released December 21th, 2009)
  - New Features
    - During CMake configuration, when a third-party library is detected,
      it is now possible to turn off the default usage of the library.
    - Warning during the build if deprecated functions are used
    - For the Irisa's Afma6 robot addition of a new vacuum tool (vpAfma6).
    - New vpImagePoint class for image point coordinates.